# library-management-api

./: README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
core/models/: book.py  user.py
core/services/: book.py  books_source.py
infrastructure/: caches.py  http.py  uuid.py
infrastructure/db/: abc_repository.py  session_manager.py  unitofwork.py
infrastructure/db/models/: models.py
infrastructure/db/repositories/: book.py
infrastructure/db/sqlalchemy/: repository.py
migrations/: env.py
migrations/versions/: 2ad62680c112_database_creation.py
presentation/asgi/fastapi/: auth.py  builder.py  user_manager.py
presentation/asgi/requests/: user.py
presentation/asgi/routes/: auth.py  book.py  user.py
utils/: settings.py
